# TokenGuard

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  SECURITY.md  VALIDATION.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
cloud/: docker-compose.yml
cloud/dashboard/app/: globals.css  page.tsx
crates/cloud/: Cargo.toml  Dockerfile  index.html
crates/cloud/src/: audit_sign.rs  entitlements.rs  http.rs  keys.rs  lib.rs  main.rs  oidc.rs  store.rs
crates/cloud/tests/: audit.rs  audit_manifest.rs  compliance_evidence.rs  entitlements_http.rs  ingest.rs  mutations.rs  oidc.rs  openapi.rs  reads.rs  replay.rs  streaming.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: main.rs  net_http.rs  server.rs  store.rs
crates/cluster/tests/: http_cluster.rs
crates/core/: Cargo.toml
crates/core/src/: agent_event.rs  audit.rs  backtest.rs  breaker.rs  compliance.rs  dlp.rs  ledger.rs  lib.rs  mcpexposure.rs  mcpreport.rs  money.rs  outcomes.rs  policy.rs  pricing.rs  savings.rs  secretbroker.rs  taint.rs
crates/gateway/: Cargo.toml
crates/gateway/examples/: bench.rs
crates/gateway/src/: backtestcli.rs  clientkeys.rs  cloudsink.rs  firewall.rs  focusexport.rs  identitymap.rs  ledger_backend.rs  lib.rs  main.rs  mcpbroker.rs  mcpcli.rs  mcpclient.rs  obs.rs  otel.rs  outcomescli.rs  pricebook.rs  provider.rs  (+10 more)
docs/: 10-ha-cluster.md  11-hosted-cloud.md  12-mcp-credential-broker.md  13-security-hardening.md  19-wave2-governance.md  20-identity-map.md
mobile/ios/: .gitignore  project.yml
sdk/js/: .npmrc  package.json
(+25 files in other folders)
