[workspace]
resolver = "2"
members = ["crates/core", "crates/gateway"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/TAIPANBOX/tokenfuse"
rust-version = "1.90"

[workspace.dependencies]
tokenfuse-core = { path = "crates/core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
